# HCP-2

./: 1.cpp  4.cpp
Parcial1/: Parcial1 (1).ipynb  Parcial1Metricas.ipynb  Ventas_April_2019.csv  Ventas_August_2019.csv  Ventas_December_2019.csv  Ventas_February_2019.csv  Ventas_January_2019.csv  Ventas_July_2019.csv  Ventas_June_2019.csv  Ventas_March_2019.csv  Ventas_May_2019.csv  Ventas_November_2019.csv  Ventas_October_2019.csv  Ventas_September_2019.csv
Parcial2/: Parcial2.ipynb
ParcialFinal/: LogisticRegression.md  Parcial3.ipynb  README.md  cancer.csv
ParcialFinal/Parcial3Qt/: CMakeLists.txt  main.cpp
ParcialFinal/Parcial3Qt/Clase_Logistica/: regressionlogistic.cpp  regressionlogistic.h
ParcialFinal/Parcial3Qt/Extraccion/: extraction.cpp  extraction.h
Taller01/: 10.cpp  11.cpp  2.cpp  3.cpp  5.cpp  6.cpp  8.cpp  9.cpp
TallerEigen/: CMakeLists.txt  main.cpp
tallerEigen/: README.md
